@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-21T00:37:59Z",
-  "count_outdated" : 72,
-  "uniques_outdated" : 34,
+  "timestamp" : "2022-11-21T08:09:38Z",
+  "count_outdated" : 73,
+  "uniques_outdated" : 35,
   "count" : 77,
   "uniques" : 39,
   "views" : [
-    {
-      "timestamp": "2022-11-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-15T00:00:00Z",
       "count": 1,
